corection des href pour passer par le routeur + creation de la classe user

--- a/template/accueil.html
+++ b/template/accueil.html
@@ -6,4 +6,4 @@
 <button>Se connecter</button>
 </form>
 <span>Vous n'êtes pas encore membre de Mytodolist ?</span>
-<button><a href="nouveauclient.php">Nouveau Membre </a> </button>
+<button><a href="index.php?route=nouveauclient">Nouveau Membre </a> </button>
