Ajout d'un retour sur la page nouveauclient

--- a/template/nouveauclient.html
+++ b/template/nouveauclient.html
@@ -5,3 +5,4 @@
     <input type="text" id="motdepasse2" name="motdepasse2" placeholder="Confirmez votre mot de passe"><br>
     <button> Validez votre inscription</button>
     </form>
+    <button><a href="index.php?route=accueil">Retour à l'écran de connexion</a> </button>
