ajout de la fonction de nouvel-utilisateur

--- a/template/accueil.html
+++ b/template/accueil.html
@@ -1,6 +1,6 @@
 <h1>Bienvenue sur Mytodolist </h1>
 <h2> Se connecter </h2>
-<form method="post">
+<form method="POST">
 <input type="text" id="pseudo" name="pseudo" placeholder="Entrez votre pseudonyme"><br>
 <input type="text" id="motdepasse" name="motdepasse" placeholder="Entrez votre mot de passe"><br>
 <button>Se connecter</button>
